added front-end add book function

--- a/templates/base.html
+++ b/templates/base.html
@@ -12,8 +12,8 @@
         <nav>
             <ul>
                <li>
-                   <a href="/books">Home</a>
-                   <a href="/books/new">Add Book</a>
+                   <a href="/">Home</a>
+                   <a href="/addbook">Add Book</a>
                </li> 
             </ul>
         </nav>
