--- a/templates/books/new-book.html
+++ b/templates/books/new-book.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<form action="/addbook" method="post">
+<form action="/<addbook>" method="post">
     <div>
       <label for="book_name">Book Name:</label>
       <input type="text" id="book_name" name="book_name" placeholder="Book Name" required autofocus>
